[metadata]
name = acre-radish
version = 0.2.0a2
description='invoke radish runs inside docker '

[options]
packages = find:
# packagae_data = var/**/*
include_package_data = True
install_requires =
    radish-bdd
    acre-lib
    acrelib @ https://github.com/acre-bdd/acrelib.git

[options.entry_points]
console_scripts =
    run-radish = acreradish.radishrun.main:main

[wheel]
universal=1
