[metadata]
name = acre-radish
version = 0.2.0a4
description='invoke radish runs inside docker '

[options]
packages = find:
# packagae_data = var/**/*
include_package_data = True
install_requires =
    radish-bdd
    acre-lib @ git+https://github.com/acre-bdd/acre-lib.git

[options.entry_points]
console_scripts =
    run-radish = acreradish.radishrun.main:main

[wheel]
universal=1
